<resources>
    <string name="app_name">Project Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="most_popular">Most Popular</string>
    <string name="up_coming">Up Coming</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="movie_date">Movie Date</string>
    <string name="search">Search</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_description">Movie Description</string>
    <string name="detail_movies">Detail Movies</string>
    <string name="ganti_bahasa">Change Language</string>
    <string name="now_playing">Now Playing</string>
    <string name="email"></string>
    <string name="nama"></string>

    <string name="one_time_alarm">One Time Alarm</string>
    <string name="tanggal_alarm">Tanggal Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="pesan_alarm">Pesan Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="batalkan_alarm">Batalkan Alarm</string>
    <string name="waktu_alarm">Waktu Alarm</string>
    <string name="user_login">User Login</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="user_sign_up">User Sign Up</string>

</resources>
