<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
    android:background="@color/colorPrimary"
android:layout_height="match_parent"
android:paddingBottom="16dp"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:paddingTop="16dp"
tools:context=".LoginActivity">

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:text="@string/user_login"
    android:textColor="#FFFFFF"
    android:textStyle="bold"
    android:layout_marginTop="50dp"
    android:textSize="50dp" />

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:hint="Email"
    android:textColor="#000"
    android:ems="10"
    android:layout_below="@+id/textView"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="190dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:background="@drawable/edit_login"
    android:id="@+id/editEmail"
    android:gravity="center"/>

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="Password"
    android:textColor="#000"
    android:ems="10"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:background="@drawable/edit_login"
    android:layout_below="@+id/editEmail"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:id="@+id/editPassword"
    android:gravity="center"/>

<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/buttonLogin"
    android:layout_below="@+id/editPassword"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:background="@drawable/editbuttonlogin"
    android:text="@string/login"/>

<Button
    android:id="@+id/buttonRegister"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/buttonLogin"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:background="@drawable/editbuttonlogin"
    android:text="@string/register" />

</RelativeLayout>
